# Neobis_ToDo_Project

./: pyproject.toml
todoproject/todo_app/: models.py  urls.py  views.py
todoproject/todo_app/migrations/: 0001_create_todo_model.py
todoproject/todo_app/templates/todo_app/: base.html  todo_list.html  update.html
todoproject/todoproject/: settings.py  urls.py
