[tool.poetry]
name = "todo-project"
version = "0.1.0"
description = ""
authors = ["Pavel Ivanov <pavel.ivanov.060988@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
